syntax = "proto3";

package clientapi;

import "github.com/relab/gorums/gorums.proto";

option go_package = "github.com/relab/hotstuff/clientapi";

// HotStuffSMR is the client-facing API to hotstuff
service HotStuffSMR {
	// ExecCommand sends a command to all replicas and waits for valid signatures from f+1 replicas
	rpc ExecCommand(Command) returns (Signature) {
		option (gorums.qc) = true;
		option (gorums.ordered) = true;
		option (gorums.qf_with_req) = true;
		option (gorums.custom_return_type) = "Empty";
	}
}

message Command {
	int64 Timestamp = 1;
	bytes Data = 2;
}

message Signature {
	uint32 ReplicaID = 1;
	bytes R = 2;
	bytes S = 3;
}

message Empty {}
